Fix menu overlap for pages without intro sections.

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -121,6 +121,11 @@ button.navbar-toggle {
 .navbar-collapse ul.navbar-nav {
   padding-bottom: 15px;
 }
+
+body.datatable #content {
+    margin-top: 60px;
+}
+
 /* ==========================================================================
 Modules 
 ========================================================================== */
